<resources>
    <string name="app_name">惠趣</string>
    <item name="is_scale_size_tag" type="id" />
    <item name="is_scale_font_tag" type="id" />

    <string name="register_title">注册</string>
    <string name="register_commit">提 交</string>
    <string name="register_psw">密码.6-16位字母或数字</string>
    <string name="register_msg_code">请填写短信验证码</string>
    <string name="register_push_code">发送验证码</string>
    <string name="register_phone">请填写正确的手机号码</string>
    <string name="register_id_code">请填写正确的身份证号码</string>
    <string name="register_new_user">新用户注册</string>
    <string name="register_area">中国  0086</string>
    <string name="register_phone_null">手机号不能为空</string>
    <string name="register_msg_code_null">短信验证码不能为空</string>
    <string name="register_check_msg_code">接收到的短信验证码为6位随机数字</string>
    <string name="register_psw_null">密码填写不能为空</string>
    <string name="register_check_psw">6-16数字和字母组合的密码</string>
    <string name="register_psw_sure_null">密码确认填写不能为空</string>
    <string name="register_psw_is_equals">两次密码填写不相同</string>

    <string name="reset_commit">确认修改</string>
    <string name="reset_psw">重置密码</string>
    <string name="reset_new_psw">确认新密码</string>
    <string name="set_new_psw">设置新密码</string>
    <string name="should_account_login">请先登录</string>
    <string name="reset_account_login">已有账号登录</string>
    <string name="reset_register_phone">请填写注册的手机号码</string>

    <string name="personal_my_order">我的订单</string>
    <string name="personal_all_order">全部</string>
    <string name="personal_pay">待付款</string>
    <string name="personal_pay_order">待付款订单</string>
    <string name="personal_out">待出行</string>
    <string name="personal_out_order">待出行订单</string>
    <string name="personal_tuikuan">退款</string>
    <string name="personal_tuikuan_order">退款订单</string>
    <string name="personal_setting">设置</string>
    <string name="personal_setting_bj">北京市</string>
    <string name="personal_my_collect">我的收藏</string>
    <string name="personal_look_history">浏览历史</string>
    <string name="personal_normal_msg">常用信息</string>
    <string name="personal_kefu_center">客服中心</string>
    <string name="personal_your_like">猜你喜欢</string>
    <string name="personal_change_img">更换图像</string>
    <string name="personal_setting_nick">修改昵称</string>
    <string name="personal_setting_change_name">修改名字</string>
    <string name="personal_setting_name">姓名</string>
    <string name="personal_setting_sex">性别</string>
    <string name="personal_setting_bir">生日</string>
    <string name="personal_setting_add">所在城市</string>
    <string name="personal_setting_psw">修改密码</string>
    <string name="personal_setting_phone">绑定手机</string>
    <string name="personal_setting_email">绑定邮箱</string>
    <string name="setting_email">邮箱</string>
    <string name="setting_old_psw">原密码</string>
    <string name="setting_new_psw">新密码</string>
    <string name="setting_sure_psw">确认新密码</string>
    <string name="setting_psw_put">请输入6-16位密码</string>
    <string name="setting_save">保存</string>
    <string name="setting_phone_text">提示：请确认填写正确的手机号码</string>
    <string name="setting_phone_text_call">提示：如果手机号码已停用，请拨打惠趣客服电话号码：400-9988725</string>
    <string name="setting_email_write">请填写邮箱账号</string>
    <string name="setting_name_write">请填写您的姓名</string>
    <string name="setting_nick_write">请填写您的昵称</string>
    <string name="setting_old_psw_null">原密码填写不能为空</string>
    <string name="setting_new_psw_null">新密码填写不能为空</string>
    <string name="setting_new_sure_null">密码确认填写不能为空</string>
    <string name="setting_email_null">邮箱填写不能为空</string>
    <string name="setting_code_null">验证码填写不能为空</string>
    <string name="setting_email_success">邮箱修改成功</string>
    <string name="setting_phone">更改手机号</string>
    <string name="setting_phone_success">更改手机号成功</string>
    <string name="setting_phone_fail">更改手机号成功</string>
    <string name="setting_phone_code">获取验证码</string>
    <string name="setting_email_text">邮箱将接收相关通知和旅行合同，请谨慎填写正确的邮箱</string>
    <string name="setting_name_text">昵称要求为2-20个汉字或2-40个英文，不能中英文混搭</string>
    <string name="setting_nick_text">昵称要求为4-16个字符，支持中文、英文、"-"、"_"。</string>
    <string name="personal_setting_cache">清除缓存</string>
    <string name="personal_setting_out">退出登录账号</string>

    <string name="new_tourist_name_text">中文姓名</string>
    <string name="change_setting_email">修改邮箱</string>
    <string name="new_tourist_name_edit">与证件保持一致\n<font color="#e11818"><b>需包含汉字,生僻字可用拼音代替</b></font></string>
    <string name="new_tourist_card_type">证件类型</string>
    <string name="new_tourist_sfz">身份证</string>
    <string name="new_tourist_hz">护照</string>
    <string name="new_tourist_gatxz">港澳通行证</string>
    <string name="new_tourist_twtxz">台湾通行证</string>
    <string name="new_tourist_hxz">回乡证</string>
    <string name="new_tourist_tbz">台胞证</string>
    <string name="new_tourist_card_num">证件号码</string>
    <string name="new_tourist_card_num_edit">与证件保持一致\n<font color="#e11818"><b>请输入正确的证件号码</b></font></string>
    <string name="new_tourist_phone">手机号码</string>
    <string name="new_tourist_phone_edit">与证件保持一致\n<font color="#e11818"><b>请输入正确的手机号码</b></font></string>
    <string name="new_tourist_sex">性别</string>
    <string name="new_tourist_mail">男</string>
    <string name="new_tourist_femail">女</string>
    <string name="new_tourist_email">电子邮件</string>
    <string name="new_tourist_eamil_edit">选填</string>
    <string name="new_tourist_commit">提交保存</string>
    <string name="new_tourist_msg">姓名及证件信息</string>
    <string name="new_tourist_title">新增游客身份</string>

    <string name="history_is_null">历史记录为空</string>
    <string name="all_order">全部订单</string>
    <string name="all_order_sx">筛选</string>
    <string name="all_order_ticket">门票</string>
    <string name="all_order_delete">删除</string>
    <string name="all_order_goout">待出行</string>
    <string name="all_order_complete">已完成</string>
    <string name="all_order_tuikuaning">退款中</string>
    <string name="all_order_tuikuaned">退款成功</string>
    <string name="all_order_ticket_num">门票数量:</string>
    <string name="all_order_outing_time">出游时间:</string>
    <string name="all_order_order_num">订单号</string>
    <string name="order_pay_time">下单时间</string>
    <string name="choose_time">选择日期</string>

    <string name="refund_know">退款须知</string>
    <string name="refund_reason">退款理由</string>
    <string name="refund_reason_edit">这里填写退款理由</string>
    <string name="commit_refund_apply">提交退款申请</string>


    <string name="kefu_cpzx">产品咨询</string>
    <string name="kefu_sqzx">售前咨询</string>
    <string name="kefu_order_question">订单问题</string>
    <string name="kefu_center">客服中心</string>
    <string name="kefu_phone_text">惠趣旅行官方电话\n<font color="#e11818"><b>400-9988-725</b></font></string>
    <string name="call_kefu_phone">拨打官方客服电话400-9988-725</string>

    <string name="order_where">长沙石燕湖旅游区</string>
    <string name="ticket_type">石燕湖游玩门票</string>
    <string name="order_ticket_price">￥90</string>
    <string name="ticket_outing_time_text">2017-08-08</string>
    <string name="ticket_num_text">1张</string>
    <string name="refund_pay_type_text">在线支付</string>
    <string name="order_account_name_text">小拓</string>
    <string name="order_account_phone_text">400-077-3608</string>
    <string name="refund_layout_text">使用日期后7天18点（含）之前可申请取消，取消订单将收取10%的手续费</string>
    <string name="order_detail">订单详情</string>
    <string name="order_detail_msg">还未获取到订单信息，请稍后再试</string>
    <string name="order_is_cancel">订单已取消</string>
    <string name="collect_is_cancel">订单已取消</string>
    <string name="order_detail_commit">提交订单</string>
    <string name="order_detail_should_pay">待支付</string>
    <string name="order_detail_ticketing">出票中</string>
    <string name="order_detail_success">交易成功</string>
    <string name="order_detail_goin_type">入园方式:</string>
    <string name="order_detail_coupon_using">优惠券使用</string>
    <string name="order_detail_total">总价</string>
    <string name="order_detail_refund_design">退订规则</string>
    <string name="order_detail_deal_time">成交时间</string>
    <string name="order_detail_pay_type">支付方式:</string>
    <string name="order_detail_pay">立即支付</string>
    <string name="order_detail_apply_refund">申请退款</string>
    <string name="order_detail_huiqu_phone">惠趣客服热线</string>
    <string name="account_msg">起/份</string>
    <string name="account_address">长沙</string>
    <string name="account_phone">手机号：</string>
    <string name="account_name">姓名：</string>

    <string name="write_order">订单填写</string>
    <string name="cancel_order">取消订单</string>
    <string name="write_order_is_login">有账号可先+"'"+登录+"'"</string>
    <string name="one_card_one_order">【一张身份证限定一张票】</string>
    <string name="in_your_know">入园须知，退改说明</string>
    <string name="play_time">游玩日期</string>
    <string name="order_price">￥215</string>
    <string name="play_today">今日\n不可订</string>
    <string name="play_more_time">更多\n日期</string>
    <string name="ticket_num">数量</string>
    <string name="take_ticket_person">取票人信息</string>
    <string name="take_person_name">姓名<font color="#e11818"><b>*</b></font></string>
    <string name="take_person_id_card">身份证号<font color="#e11818"><b>*</b></font></string>
    <string name="take_person_phone">手机号<font color="#e11818"><b>*</b></font></string>
    <string name="take_person_code">验证码</string>
    <string name="take_person_check_code">校验码</string>
    <string name="push_check_code">请输入右侧校验码</string>
    <string name="take_person_free">免费获取验证码</string>
    <string name="take_person_pay_toutal">应付总金额:</string>
    <string name="take_person_commit">提交订单</string>
    <string name="take_person_name_text">必填</string>
    <string name="tourist_rypz">用于景区入园等凭证</string>
    <string name="recieve_msg_pz">接收取票短信凭证</string>
    <string name="take_person_fymx">费用明细</string>

    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="title_activity_team_detail">TeamDetailActivity</string>

    <string name="total_price">总&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;额</string>



    <item name="TAG_IMAGE" type="id"></item>
</resources>
