<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/view_top" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="33px"
        android:text="@string/setting_phone_text"
        android:textColor="@color/red_text"
        android:textSize="30px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2px"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/change_phone"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:textColor="@color/black_text"
            android:padding="33px"
            android:textSize="33px" />

        <EditText
            android:id="@+id/phone_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="33px"
            android:background="@null"
            android:hint="@string/take_person_name_text"
            android:textColor="@color/black_text"
            android:textColorHint="@color/gray_text"
            android:textSize="33px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2px"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300px"
            android:padding="33px"
            android:layout_height="wrap_content"
            android:text="@string/take_person_code"
            android:textColor="@color/black_text"
            android:textSize="33px" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/psw_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="33px"
            android:background="@null"
            android:hint="@string/setting_psw_put"
            android:textColor="@color/black_text"
            android:textColorHint="@color/gray_text"
            android:textSize="33px" />

        <TextView
            android:id="@+id/obtain_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_phone_code"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/red_text"
            android:layout_marginRight="30px"
            android:textSize="33px" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/call_kefu_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="27px"
        android:text="@string/setting_phone_text_call"
        android:textColor="@color/gray_text"
        android:textSize="33px" />


    <TextView
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150px"
        android:layout_marginRight="150px"
        android:layout_marginTop="280px"
        android:background="@drawable/shape_login_commit"
        android:gravity="center"
        android:padding="33px"
        android:text="@string/setting_save"
        android:textColor="@color/white"
        android:textSize="33px" />

</LinearLayout>